[tool.poetry]
name = "cipher_lmd2231"
version = "0.1.0"
description = "Modern Data Structures HW7"
authors = ["Lauren Deitz"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
